# easy-opencv-wrapper

./: .gitignore  CHANGELOG.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  DEBUGGED_SUMMARY.md  DIFFERENCE.md  DIFFERENCES.md  INSTALLATION_GUIDE.md  LOCAL_TEST_RESULTS.md  MANIFEST.in  OBJECT_DETECTION_CLASSES_GUIDE.md  PROJECT_STRUCTURE.md  PYPI_PUBLISHING_GUIDE.md  README.md  TEST_ANALYSIS_REPORT.md  USAGE_GUIDE.md  clean_library.py  cleanup.ps1  cleanup_library.py  debug_opencv_functions.py  demo_object_detection.py  error_module.md  essential_cleanup.py  keep_essential_files.ps1  minimal_cleanup.py  project_flow.mmd  project_pipeline.md  project_pipeline_summary.md  pyproject.toml  quick_demo.py  requirements.txt  run_fixed_tests.py  run_single_test.py  setup.py  test_functionality.py  test_local.py  test_object_detection_classes.py  test_package.py  test_simple.py  test_video_operations_classes.py  (+3 more)
Documentaion/: DOCUMENTATION.md  EASY_OPENCV_BENEFITS.md  OBJECT_DETECTION_TRANSFORMATION_SUMMARY.md  VIDEO_OPERATIONS_CLASSES_GUIDE.md  WHY_EASY_OPENCV.md
easy_opencv/: __init__.py  drawing_operations.py  feature_detection.py  filters.py  image_operations.py  image_processing.py  object_detection.py  transformations.py  utils.py  video_operations.py
easy_opencv.egg-info/: PKG-INFO  SOURCES.txt
examples/: advanced_examples.py  basic_examples.py  object_detection_examples.py  video_operations_examples.py
tests/: __init__.py  base_test_case.py  run_tests.py  test_core_functions.py  test_drawing_operations.py  test_feature_detection.py  test_filter_functions.py  (+9 more)
