[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy_opencv"
version = "1.0.0"
description = "A simplified and customizable OpenCV wrapper for easy computer vision tasks"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "pillow>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/easy_opencv"
Repository = "https://github.com/yourusername/easy_opencv.git"
Issues = "https://github.com/yourusername/easy_opencv/issues"
